@@ -10,6 +10,9 @@ Changes log
        - Fix CORS header name Access-Control-Allow-Credentials. Issue #1030
        - Fixed malformed JSON in the JsonpRepresentation.
          Reported by Wagner Correa Ramos.
+       - When catching a 405 status, make sure to update allowed methods inside 
+         a ServerResource. Issue #1034.
+         Reported by Jeremy Gustie.
     - Misc
        - Completed the Javadocs for query parameter declarations inside
          HTTP method annotations such as @Get("json?param=val).
